--- a/code/bsp/Makefile.common
+++ b/code/bsp/Makefile.common
@@ -2,6 +2,7 @@
 
 GCC_INSTALL_ROOT ?= /opt/gcc-arm-none-eabi/bin/
 GCC_PREFIX ?= arm-none-eabi
+BUILD ?= build/debug
 BSP=../bsp
 
 
@@ -27,13 +28,16 @@ LINKER_SCRIPT := $(BSP)/STM32F767ZITx_FLASH.ld
 # FLAGS AND COMPILER SETUP
 
 # Optimisation
-OPT = -O3 -g3
-#OPT = -g
+ifeq ($(BUILD), build/debug)
+OPT = -g -Og
+else
+OPT = -flto -Os
+endif
 
 # Flags shared between tools.
 COMMON_FLAGS = -DSTM32F767xx -DHSE_VALUE=8000000
 COMMON_FLAGS += -mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard
-COMMON_FLAGS += -Wall -Werror $(OPT)
+COMMON_FLAGS += -Wall -Werror
 
 # Flags shared between C and C++.
 CCOMMON_FLAGS += -ffunction-sections -fdata-sections -fno-strict-aliasing
@@ -53,7 +57,7 @@ ASMFLAGS += $(COMMON_FLAGS) -g3
 # Linker flags
 LDFLAGS += -T$(LINKER_SCRIPT)
 LDFLAGS += -mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard
-LDFLAGS += -specs=nano.specs -lc -lm -lnosys
+LDFLAGS += -specs=nano.specs -lc -lm -lnosys -flto
 LDFLAGS += -Wl,--gc-sections
 
 
@@ -79,21 +83,21 @@ SIZE    := $(GCC_INSTALL_ROOT)$(GCC_PREFIX)-size
 
 .PHONY: default
 
-default: version.h build/$(TARGET).out build/$(TARGET).hex build/$(TARGET).bin
+default: version.h $(BUILD)/$(TARGET).out $(BUILD)/$(TARGET).hex $(BUILD)/$(TARGET).bin
 
 # Per-target object files derived from source paths.
 OBJS1 = $(patsubst %.s,%.o,$(patsubst %.cpp,%.o,$(patsubst %.c,%.o,$(SRCS))))
 OBJS2 = $(patsubst ../../%,%,$(OBJS1))
-OBJS = $(addprefix build/$(TARGET)/,$(OBJS2))
+OBJS = $(addprefix $(BUILD)/$(TARGET)/,$(OBJS2))
 
 # Per-target dependency files derived from source paths.
 DEPS1 = $(patsubst %.s,%.d,$(patsubst %.cpp,%.d,$(patsubst %.c,%.d,$(SRCS))))
-DEPS = $(addprefix build/$(TARGET)/,$(DEPS1))
+DEPS = $(addprefix $(BUILD)/$(TARGET)/,$(DEPS1))
 
 
 # Link rule.
 
-build/$(TARGET).out: $(OBJS)
+$(BUILD)/$(TARGET).out: $(OBJS)
 	$(info Linking target: $@)
 	@echo $^ $(LIB_FILES) > $(@:.out=.in)
 	@$(CC) $(LDFLAGS) @$(@:.out=.in) -Wl,-Map=$(@:.out=.map) -o $@
@@ -115,17 +119,17 @@ version.h:
 
 # Compilation rules.
 
-build/$(TARGET)/%.o: %.c
+$(BUILD)/$(TARGET)/%.o: %.c
 	$(info Compiling file: $(notdir $<))
 	@$(MK) -p $(dir $@)
 	@$(CC) -std=c99 -MP -MMD -c -o $@ $< $(CFLAGS) $(INC_PATHS)
 
-build/$(TARGET)/%.o: %.cpp
+$(BUILD)/$(TARGET)/%.o: %.cpp
 	$(info Compiling file: $(notdir $<))
 	@$(MK) -p $(dir $@)
 	@$(CXX) -MP -MMD -c -o $@ $< $(CXXFLAGS) $(INC_PATHS)
 
-build/$(TARGET)/%.o: %.s
+$(BUILD)/$(TARGET)/%.o: %.s
 	$(info Assembling file: $(notdir $<))
 	@$(MK) -p $(dir $@)
 	@$(CC) -x assembler-with-cpp -MP -MMD -c -o $@ $< $(ASMFLAGS) $(INC_PATHS)
