--- a/code/serial-demo/openocd.cfg
+++ b/code/serial-demo/openocd.cfg
@@ -1,2 +1,9 @@
 source [find interface/stlink-v2-1.cfg]
 source [find target/stm32f7x.cfg]
+$_TARGETNAME configure -event gdb-attach {
+   halt
+}
+$_TARGETNAME configure -event gdb-attach {
+   reset init
+}
+
