--- a/code/apps/Makefile.common
+++ b/code/apps/Makefile.common
@@ -5,9 +5,9 @@
 BASE=../..
 
 # Optimise for size on STM32 platform and use link-time optimisation.
-OPT=-Os -flto
-LDFLAGS += -flto
-#OPT=-g -Og
+#OPT=-Os -flto
+#LDFLAGS += -flto
+OPT=-g -Og
 
 # Common STM32 hardware setup sources: cache and clock configuration
 # and startup code.
